css/style.css
* {
	padding: 0px;
	margin: 0px;
	overflow: auto;
}

body {
	background-color: #FFEA9D;
	color: #57274D;
	font-family: "Ubuntu Monospaced";
}

a {
	color: #005386;
}

p {
	margin: 1.0em 0em;
	line-height: 1.5em;
	font-size: 1.2em;
	overflow: auto;
}

code {
	margin: 0px;
	color: #560A86;
	cursor: copy;
}

#contact li {
	margin: 4px 0px;
}

#header {
	color: #000000;
	font-size: 27px;
	padding: 8px 24px;
}

#header-link {
	font-family: "Ubuntu Monospaced";
	font-size: 24px;
	letter-spacing: 4px;
	font-variant: small-caps;
	font-weight: bold;
	color: #328E84;
	display: inline-block;
	padding-left: 0.45em;
}

#header img {
	vertical-align: middle;
}

#header a,
#nav a,
#menu a {
	text-decoration: none;
}

#menu {
	color: #853975;
	overflow: hidden;
	background-color: #cfb666;
	font-family: "Ubuntu Monospaced";
	font-size: 24px;
	padding: 4px 8px;
	border-bottom: 1px solid #853975;
	border-top: 1px solid #853975;
}

#menu a {
	padding: 4px 16px;
	color: #580046;
}

#menu a:hover {
	background-color: #AD8E2C;
}

#footer {
	background-color: #cfb666;
	color: #005A52;
	font-family: "Ubuntu Monospaced";
	font-size: 16px;
	padding: 4px 16px;
	width: 100%;
	position: fixed;
	left: 0px;
	bottom: 0px;

	display: flex;
	justify-content: space-around;
}

#footer img {
	width: 15px;
	height: 16px;
}

h1 {
	margin: 1.0em 0em 1.0em;
	padding-left: 1.0em;
	font-size: 2.0em;
	border-left: 2px solid #1EEEEE;
	letter-spacing: 2px;
}

h2 {
	margin: 1.0em 0em 0.334em;
	padding-left: 1.0em;
	font-size: 1.8em;
	border-left: 2px solid #FF6A00;
	letter-spacing: 2px;
}

h3 {
	margin: 1.0em 0em 0.334em;
	padding-left: 1.0em;
	font-size: 1.6em;
	border-left: 2px solid #F51978;
	letter-spacing: 2px;
}

h4 {
	margin: 1.0em 0em 0.334em;
	padding-left: 1.0em;
	font-size: 1.4em;
	border-left: 2px solid #1FD51F;
	letter-spacing: 2px;
}

h5 {
	margin: 1.0em 0em 0.334em;
	padding-left: 1.0em;
	font-size: 1.2em;
	border-left: 2px solid #D128D1;
	letter-spacing: 2px;
}

#content {
	clear: both;
	margin: 0;
	padding: 0;
}

#nav {
	float: left;
	margin: 0 1px 0 0;
	padding: 16px 0px;
	font-family: "Ubuntu Monospaced";
	font-size: 20px;
	border-right: 2px dotted #853975;
	width: 204px;
}

#nav li {
	list-style: none;
}

.contact-list li {
	font-size: 2.0em;
	display: inline-block;
	list-style: none;
	padding: 0em 0.5em;
}

#contact ul,
.contact-list {
	margin: 16px;
}

#nav li ul {
	padding-left: 0.6em !important;
}

#nav li a {
	display: block;
	padding: 6px 24px;
}

#main {
	margin: 0 0 0 204px;
	padding: 1.5em;
}

.left {
	float: left;
}

.right {
	float: right;
	margin: 0;
	padding: 0;
}

.hidden {
	margin: 32px;
	display: none;
}

.btn {
	padding: 8px 16px;
	font-family: "Ubuntu Monospaced";
	font-size: 16px;
	background-color: #FA8C368F;
	border: 1px solid #8E3B3B;
	border-radius: 4px;
}

.btn a {
	text-decoration: none;
}

.btn:hover a {
	color: #000000;
}

.btn:hover {
	background-color: #11AAAF;
	border: 1px solid #005151;
}

::selection {
	background-color: #57274D;
	color: #FFEA9D;
}

#nav ::selection {
	background-color: #005386;
	color: #FFEA9D;
}

.rm-left-border {
	border-left: none;
	padding-left: 0em;
}

.center {
	text-align: center;
}

.alter-list {
	list-style: none;
	font-size: 1.0em;
}

.alter-list a {
	text-decoration: none;
	font-size: 1.0em;
}

.alter-list li {
	margin: 0.5em 0em;
	background-color: #D6EDB75E;
	padding: 0.5em;
	border: 1px solid;
	border-radius: 0.5em;
	overflow: auto;
}

.alter-list img {
	vertical-align: middle;
	max-width: 1.5em;
	max-height: 1.5em;
	padding-right: 10px;
}

li p {
	margin: 10px 0px 0px;
}

@media only screen and (max-width: 720px) {
}

